tests/transpiler/x/zig/map_nested_assign.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/map_nested_assign.zig:5:119: error: redefinition of label 'blk'
/workspace/mochi/tests/transpiler/x/zig/map_nested_assign.zig:5:16: note: previous definition here
